--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -20,12 +20,12 @@ jobs:
         repository: GeoNode/geonode
         fetch-depth: 1
         ref: 3.1.x
-        path: bims/geonode
+        path: geonode
      - name: Install dependencies
        run: |
         pwd
-        ls /home/runner/work/django-bims/django-bims/bims/geonode/
-        pip3 install -r bims/geonode/requirements.txt
+        move geonode/geonode bims/
+        pip3 install -r geonode/requirements.txt
         pip3 install -r bims/deployment/docker/REQUIREMENTS.txt
      - name: set pythonpath
        run: |
@@ -38,6 +38,6 @@ jobs:
      - name: Run tests
        env:
          DJANGO_SETTINGS_MODULE: core.settings.dev_docker
-         PYTHONPATH: /home/runner/work/django-bims/django-bims/geonode;/home/runner/work/django-bims/django-bims/bims
+         PYTHONPATH: /home/runner/work/django-bims/django-bims/bims/geonode;/home/runner/work/django-bims/django-bims/bims
        working-directory: bims
        run: python manage.py test
