--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -37,6 +37,7 @@ jobs:
         mv geonode/geonode bims/
         pip3 install -r geonode/requirements.txt
         pip3 install -r bims/deployment/docker/REQUIREMENTS.txt
+        pip3 install pygdal==$(gdal-config --version).*
      - name: set pythonpath
        run: |
         echo "PYTHONPATH=/home/runner/work/django-bims/django-bims/bims/geonode;/home/runner/work/django-bims/django-bims/bims" >> $GITHUB_ENV
