--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -19,6 +19,7 @@ jobs:
          sudo apt-get install -y libxml2-dev libxslt-dev
          sudo apt-get install -y geoip-bin geoip-database
          sudo apt-get install -y curl
+         pip3 install kombu==4.6.8
          pip3 install uwsgi
          pip3 install celery==4.4.0
      - uses: actions/checkout@v2
