--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
+    container: python:3.7-slim-stretch
     # Service containers to run with `container-job`
     services:
       # Label used to access the service container
