--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -62,14 +62,14 @@ jobs:
      - name: set pythonpath
        run: |
         echo "PYTHONPATH=/home/runner/work/django-bims/django-bims/bims/geonode;/home/runner/work/django-bims/django-bims/bims" >> $GITHUB_ENV
-        echo "DJANGO_SETTINGS_MODULE=core.settings.dev_docker" >> $GITHUB_ENV
+        echo "DJANGO_SETTINGS_MODULE=core.settings.test_docker" >> $GITHUB_ENV
      - name: Use the value
        run: |
         echo "${{ env.PYTHONPATH }}"
         echo "${{ env.DJANGO_SETTINGS_MODULE }}"
      - name: Run tests
        env:
-         DJANGO_SETTINGS_MODULE: core.settings.dev_docker
+         DJANGO_SETTINGS_MODULE: core.settings.test_docker
          PYTHONPATH: /home/runner/work/django-bims/django-bims/bims/geonode;/home/runner/work/django-bims/django-bims/bims
        working-directory: bims
-       run: python manage.py test --noinput bims
+       run: python manage.py test bims --noinput --settings=core.settings.test_docker
