--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -33,12 +33,12 @@ jobs:
         python-version: 3.7.10
      - name: Install system dependencies
        run: |
-         sudo apt-get update
-         sudo apt-get install -y gcc make libc-dev musl-dev libpcre3 libpcre3-dev g++
-         sudo apt-get install -y libgeos-dev libgdal-dev
-         sudo apt-get install -y libxml2-dev libxslt-dev
-         sudo apt-get install -y geoip-bin geoip-database
-         sudo apt-get install -y curl
+         apt-get update
+         apt-get install -y gcc make libc-dev musl-dev libpcre3 libpcre3-dev g++
+         apt-get install -y libgeos-dev libgdal-dev
+         apt-get install -y libxml2-dev libxslt-dev
+         apt-get install -y geoip-bin geoip-database
+         apt-get install -y curl
      - uses: actions/checkout@v2
        with:
         path: bims
