--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -53,12 +53,12 @@ jobs:
        run: |
         pwd
         mv geonode/geonode bims/
-        pip install -r geonode/requirements.txt
-        pip install -r bims/deployment/docker/REQUIREMENTS.txt
-        pip install kombu==4.6.8
-        pip install uwsgi
-        pip install celery==4.4.0
-        pip install pygdal==$(gdal-config --version).*
+        python -m pip install -r geonode/requirements.txt
+        python -m pip install -r bims/deployment/docker/REQUIREMENTS.txt
+        python -m pip install kombu==4.6.8
+        python -m pip install uwsgi
+        python -m pip install celery==4.4.0
+        python -m pip install pygdal==$(gdal-config --version).*
      - name: set pythonpath
        run: |
         echo "DJANGO_SETTINGS_MODULE=core.settings.test_docker" >> $GITHUB_ENV
