--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,8 +1,9 @@
 name: Test Django App
 
 on: 
-  pull_request:
-
+  push: 
+    branches:
+      - '3.x'
 jobs:
   tests:
     runs-on: ubuntu-18.04
