--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -42,8 +42,6 @@ jobs:
          apt-get install -y geoip-bin geoip-database
          apt-get install -y curl
      - uses: actions/checkout@v2
-       with:
-        path: bims
      - name: Checkout tools repo
        uses: actions/checkout@v2
        with:
@@ -54,25 +52,24 @@ jobs:
      - name: Install dependencies
        run: |
         pwd
-        mv geonode/geonode bims/
         python -m pip install -r geonode/requirements.txt
-        python -m pip install -r bims/deployment/docker/REQUIREMENTS.txt
-        python -m pip install -r bims/deployment/docker/REQUIREMENTS-dev.txt
+        python -m pip install -r deployment/docker/REQUIREMENTS.txt
+        python -m pip install -r deployment/docker/REQUIREMENTS-dev.txt
         python -m pip install kombu==4.6.8
         python -m pip install uwsgi
         python -m pip install celery==4.4.0
         python -m pip install pygdal==$(gdal-config --version).*
      - name: set pythonpath
        run: |
-        echo "PYTHONPATH=bims:bims/geonode" >> $GITHUB_ENV
+        echo "PYTHONPATH=." >> $GITHUB_ENV
         echo "DJANGO_SETTINGS_MODULE=core.settings.test_docker" >> $GITHUB_ENV
      - name: Use the value
        run: |
         echo "${{ env.DJANGO_SETTINGS_MODULE }}"
      - name: Run tests
        env:
-         PYTHONPATH: bims:bims/geonode
+         PYTHONPATH: '.'
          DJANGO_SETTINGS_MODULE: core.settings.test_docker
        run: |
         cd bims
-        python manage.py test --noinput --settings=core.settings.test_docker
+        python manage.py test
