--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -66,6 +66,8 @@ jobs:
        run: |
         echo "PYTHONPATH='/__w/django-bims/django-bims/bims:/__w/django-bims/django-bims/geonode'" >> $GITHUB_ENV
         echo "DJANGO_SETTINGS_MODULE=core.settings.test_docker" >> $GITHUB_ENV
+        echo "ROOT_URLCONF=core.urls" >> $GITHUB_ENV
+        echo "STATIC_ROOT=/__w/django-bims/django-bims/bims/bims/static" >> $GITHUB_ENV
      - name: Use the value
        run: |
         echo "${{ env.DJANGO_SETTINGS_MODULE }}"
@@ -73,6 +75,9 @@ jobs:
        env:
          PYTHONPATH: '/__w/django-bims/django-bims/bims:/__w/django-bims/django-bims/geonode'
          DJANGO_SETTINGS_MODULE: core.settings.test_docker
+         ROOT_URLCONF: core.urls
+         STATIC_ROOT: /__w/django-bims/django-bims/bims/bims/static
+         APP_NAME: bims
        run: |
         cd bims
         python manage.py test bims
