--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -79,6 +79,7 @@ services:
       - geoserver:geoserver
       - rabbitmq:rabbitmq
       - worker:worker
+      - searchworker:searchworker
     restart: unless-stopped
     user: root
     extra_hosts:
@@ -91,6 +92,49 @@ services:
     working_dir: /home/web/django_project
     command: celery worker --app=bims.celery:app -B -l debug
     entrypoint: []
+    environment:
+      - DATABASE_NAME=gis
+      - DATABASE_USERNAME=docker
+      - DATABASE_PASSWORD=docker
+      - DATABASE_HOST=db
+      - DJANGO_SETTINGS_MODULE=core.settings.dev_docker
+      - VIRTUAL_HOST=bims.kartoza.com
+      - VIRTUAL_PORT=8080
+      - RABBITMQ_HOST=rabbitmq
+      - GEOCONTEXT_URL=https://geocontext.kartoza.com
+      - CONTACT_US_EMAIL=dimas@kartoza.com
+      - APP_NAME=bims
+      - ASYNC_SIGNALS=True
+      - ASYNC_SIGNALS_GEONODE=True
+      - DEFAULT_BACKEND_UPLOADER=geonode.importer
+      - PYTHONPATH=/home/web/django_project:/usr/src/geonode
+      - DATABASE_URL=postgis://docker:docker@db:5432/gis
+      - GEOSERVER_LOCATION=http://geoserver/geoserver/
+      - C_FORCE_ROOT=True
+      - DEBUG=True
+      - BROKER_URL=amqp://rabbitmq:5672
+      - MEDIA_ROOT=/home/web/media
+    links:
+      - smtp:smtp
+      - db:db
+      - geoserver:geoserver
+      - rabbitmq:rabbitmq
+      - cache:cache
+    volumes:
+      - ../../django-bims:/home/web/django_project
+      - ./static:/home/web/static:rw
+      - ./media:/home/web/media:rw
+      - ./logs:/var/log/
+    restart: unless-stopped
+    user: root
+
+  searchworker:
+    build:
+      context: docker
+    hostname: worker
+    working_dir: /home/web/django_project
+    command: celery worker --app=bims.celery:app -Q search -B -l debug
+    entrypoint: [ ]
     environment:
       - DATABASE_NAME=gis
       - DATABASE_USERNAME=docker
