--- a/deployment/docker/REQUIREMENTS.txt
+++ b/deployment/docker/REQUIREMENTS.txt
@@ -17,7 +17,7 @@ django-allauth==0.41.0
 django-easy-audit==1.2.2
 django-grappelli==2.14.1
 
-djangorestframework==3.9.1
+djangorestframework>=3.11.2
 djangorestframework-gis==0.15
 django-colorfield==0.1.15
 pygbif==0.4.0
@@ -61,8 +61,6 @@ wagtail==2.9.3
 service-identity==18.1.0
 django-proxy==1.2.1
 geopy==2.0.0
-django-celery-inspect==0.2.1
 python-dwca-reader==0.15.0
 gitpython==3.1.13
 django-json-widget==1.1.1
-celery==4.4.2
