--- a/deployment/production/Dockerfile
+++ b/deployment/production/Dockerfile
@@ -35,13 +35,13 @@ RUN echo "Updating apt-get" && \
     rm -rf /var/lib/apt/lists/* && \
     rm -rf ~/.cache/pip
 
-# Install python dependencies
-RUN echo "Geonode python dependencies"
-RUN pip install celery==4.4.0
-
 # install shallow clone of geonode master branch
 RUN git clone -b '3.0' --depth=1 git://github.com/GeoNode/geonode.git --branch '3.0' /usr/src/geonode
 RUN cd /usr/src/geonode/; pip install -r requirements.txt --no-cache-dir; pip install -e .
+
+# Install python dependencies
+RUN echo "Geonode python dependencies"
+RUN pip install celery==4.4.2
 
 # Install pygdal (after requirements https://github.com/GeoNode/geonode/pull/4599)
 RUN pip install pygdal==$(gdal-config --version).*
@@ -58,6 +58,8 @@ COPY . /usr/src/app
 ADD REQUIREMENTS.txt /REQUIREMENTS.txt
 RUN pip install -r /REQUIREMENTS.txt; pip install uwsgi
 RUN npm -g install yuglify
+
+RUN pip install MarkupSafe==1.1.1 && pip install pygbif==0.6.0
 
 # Debian is messed up and aliases node as nodejs
 # So when yuglify is installed it references the wrong node binary...
