Search existing fbis site code when upload occurrence data

--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -91,7 +91,7 @@ services:
       context: docker
     hostname: worker
     working_dir: /home/web/django_project
-    command: celery worker --app=bims.celery:app -B -l debug
+    command: celery worker --app=bims.celery:app -Q update -B -l debug
     entrypoint: []
     environment:
       - DATABASE_NAME=gis
