--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     restart: unless-stopped
 
   db:
-    image: kartoza/postgis:9.6-2.4
+    image: dimasciput/postgis:9.6-2.4
     environment:
       - ALLOW_IP_RANGE=0.0.0.0/0
       - POSTGRES_USER=docker
