--- a/REQUIREMENTS-dev.txt
+++ b/REQUIREMENTS-dev.txt
@@ -1,3 +1,9 @@
--r deployment/docker/REQUIREMENTS.txt
--r deployment/docker/REQUIREMENTS-dev.txt
-nodeenv==1.2.0
+django-nose==1.4.6
+pep8>=1.5.7,<1.6
+pylint==2.5.2
+flake8==3.8.1
+factory_boy==2.12.0
+
+# pdb plus plus
+pdbpp
+
