--- a/REQUIREMENTS.txt
+++ b/REQUIREMENTS.txt
@@ -1,1 +1,66 @@
--r deployment/docker/REQUIREMENTS.txt
+psycopg2-binary==2.8.5
+django-braces==1.14.0
+django-model-utils==4.0.0
+django-pipeline==1.7.0
+django-role-permissions==2.2.1
+
+raven==6.10.0
+django-sentry==1.13.5
+requests>=2.23.0
+pytz
+# support special characters
+
+django-allauth==0.41.0
+
+# Django Easy Audit
+# https://github.com/soynatan/django-easy-audit
+django-easy-audit==1.2.2
+django-grappelli==2.14.1
+
+djangorestframework>=3.11.2
+djangorestframework-gis==0.15
+django-colorfield==0.1.15
+pygbif==0.4.0
+
+# bibliography
+bibtexparser==1.1.0
+eutils==0.6.0
+habanero==0.7.2
+
+# documentation generation
+django-modelsdoc==0.1.11
+
+# contacts page
+django-contact-us==0.4.3
+django-ordered-model==3.4.1
+
+# Statistics Dashboard
+
+# prometheus monitoring support
+django-prometheus==2.0.0
+prometheus_client==0.7.1
+
+pyshp==2.1.0
+
+# for django flatpages
+django-ckeditor==6.0.0
+django-crispy-forms==1.9.1
+# pandas==0.23.4
+# git+https://github.com/dimasciput/pandas_access.git
+
+selenium==3.141.0
+matplotlib==3.2.1
+django-admin-rangefilter==0.6.0
+django-preferences==1.0.0
+PyGithub==1.51
+sorl-thumbnail==12.6.3
+svglib==1.0.0
+simplejson==3.17.0
+django-extensions==2.2.9
+wagtail==2.12.6
+service-identity==18.1.0
+django-proxy==1.2.1
+geopy==2.0.0
+python-dwca-reader==0.15.0
+gitpython==3.1.13
+django-json-widget==1.1.1
