--- a/deployment/docker/Dockerfile
+++ b/deployment/docker/Dockerfile
@@ -46,7 +46,7 @@ RUN pip install celery==4.4.2
 # Install pygdal (after requirements https://github.com/GeoNode/geonode/pull/4599)
 RUN pip install pygdal==$(gdal-config --version).*
 
-COPY . /usr/src/app
+# COPY . /usr/src/app
 #
 #RUN chmod +x /usr/src/app/tasks.py \
 #    && chmod +x /usr/src/app/entrypoint.sh
@@ -55,12 +55,9 @@ COPY . /usr/src/app
 #RUN pip install --no-cache-dir -r /usr/src/app/requirements.txt
 #RUN pip install -e /usr/src/app
 
-ADD REQUIREMENTS.txt /REQUIREMENTS.txt
+ADD deployment/docker/REQUIREMENTS.txt /REQUIREMENTS.txt
 RUN pip install -r /REQUIREMENTS.txt; pip install uwsgi
 RUN npm --quiet -g install yuglify
-
-WORKDIR /home/web/django_project/bims
-RUN npm install --quiet -g webpack@5.50.0 && npm install --quiet -g webpack-cli@4.8.0 && npm install --quiet && webpack --mode development
 
 RUN pip install MarkupSafe==1.1.1 && pip install pygbif==0.6.0
 
@@ -72,14 +69,16 @@ RUN pip install MarkupSafe==1.1.1 && pip install pygbif==0.6.0
 
 # Install grunt
 RUN npm install -g grunt-cli
-ADD package.json /package.json
-ADD Gruntfile.js /Gruntfile.js
+ADD deployment/docker/package.json /package.json
+ADD deployment/docker/Gruntfile.js /Gruntfile.js
 RUN cd / && npm install
 
 #USER www-data
+ADD . /home/web/django_project
 WORKDIR /home/web/django_project
+RUN cd bims && npm install --quiet -g webpack@5.50.0 && npm install --quiet -g webpack-cli@4.8.0 && npm install --quiet && webpack --mode production
 
-ADD uwsgi.conf /uwsgi.conf
+ADD deployment/docker/uwsgi.conf /uwsgi.conf
 
 # Open port 8080 as we will be running our uwsgi socket on that
 EXPOSE 8080
