--- a/deployment/docker/Dockerfile-dev
+++ b/deployment/docker/Dockerfile-dev
@@ -23,10 +23,10 @@ ADD REQUIREMENTS-dev.txt /REQUIREMENTS-dev.txt
 RUN pip install -r /REQUIREMENTS-dev.txt
 ADD bashrc /root/.bashrc
 
-RUN apt-get install -y chromium
-RUN mkdir -p /opt/karma
-RUN npm install -g karma
-RUN cd / && npm install
+# RUN apt-get install -y chromium
+# RUN mkdir -p /opt/karma
+# RUN npm install -g karma
+# RUN cd / && npm install
 
 RUN apt-get install vim -y
 ADD karma.conf.docker.js /karma.conf.js
