--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image
 on: 
   push: 
     branches:
-      - '3.x'
+      - 'main'
 
 jobs:
   build:	
@@ -18,4 +18,4 @@ jobs:
         workdir: deployment/production
         username: ${{ secrets.DOCKER_USERNAME }}	
         password: ${{ secrets.DOCKER_PASSWORD }}	
-        buildargs: BIMS_TAG=3.x	
+        buildargs: BIMS_TAG=main
