--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,10 +4,10 @@ on:
   workflow_dispatch:
   push: 
     branches:
-      - '3.x'
+      - 'main'
   pull_request: 
     branches:
-      - '3.x'
+      - 'main'
       
 jobs:
   tests:
