--- a/deployment/docker-compose.test.yml
+++ b/deployment/docker-compose.test.yml
@@ -7,9 +7,7 @@ version: '2'
 services:
 
   dev:
-    build:
-      context: docker
-      dockerfile: Dockerfile-dev
+    image: ${APP_IMAGE}:dev
     command: ''
     environment:
       - SITE_DOMAIN_NAME=http://django-bims.test
