Use existing image

--- a/deployment/docker-compose.test.yml
+++ b/deployment/docker-compose.test.yml
@@ -7,7 +7,7 @@ version: '2'
 services:
 
   dev:
-    image: ${APP_IMAGE}:dev
+    image: kartoza/kbims_uwsgi:latest
     command: ''
     links:
       - db:db
