--- a/deployment/docker/Dockerfile-dev
+++ b/deployment/docker/Dockerfile-dev
@@ -7,7 +7,7 @@ MAINTAINER Dimas Ciputra<dimas@kartoza.com>
 # https://docs.docker.com/examples/running_ssh_service/
 # Sudo is needed by pycharm when it tries to pip install packages
 RUN apt-get update && apt-get install -y openssh-server sudo
-RUN mkdir /var/run/sshd
+#RUN mkdir /var/run/sshd
 RUN echo 'root:docker' | chpasswd
 RUN echo "PermitRootLogin yes" >> /etc/ssh/sshd_config
 
