--- a/deployment/docker/Dockerfile
+++ b/deployment/docker/Dockerfile
@@ -1,5 +1,5 @@
 #--------- Generic stuff all our Dockerfiles should start with so we get caching ------------
-FROM python:3.7-slim-stretch
+FROM python:3.7-slim-stretch as prod
 MAINTAINER Dimas Ciputra<dimas@kartoza.com>
 
 RUN mkdir -p /usr/src/{app,geonode}
@@ -86,3 +86,45 @@ EXPOSE 8080
 # ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
 
 CMD ["uwsgi", "--ini", "/uwsgi.conf"]
+
+FROM prod as dev
+
+# This section taken on 2 July 2015 from
+# https://docs.docker.com/examples/running_ssh_service/
+# Sudo is needed by pycharm when it tries to pip install packages
+RUN apt-get update && apt-get install -y openssh-server sudo
+RUN mkdir /var/run/sshd
+RUN echo 'root:docker' | chpasswd
+RUN echo "PermitRootLogin yes" >> /etc/ssh/sshd_config
+
+# SSH login fix. Otherwise user is kicked off after login
+RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd
+
+ENV NOTVISIBLE "in users profile"
+RUN echo "export VISIBLE=now" >> /etc/profile
+
+# End of cut & paste section
+
+ADD REQUIREMENTS-dev.txt /REQUIREMENTS-dev.txt
+RUN pip install -r /REQUIREMENTS-dev.txt
+ADD bashrc /root/.bashrc
+
+RUN apt-get install -y chromium
+RUN mkdir -p /opt/karma
+RUN npm install -g karma
+RUN cd / && npm install
+
+RUN apt-get install vim -y
+ADD karma.conf.docker.js /karma.conf.js
+
+# --------------------------------------------------------
+# Open ports as needed
+# --------------------------------------------------------
+
+# Open port 8080 as we will be running our django dev server on
+EXPOSE 8080
+# Open port 22 as we will be using a remote interpreter from pycharm
+EXPOSE 22
+
+CMD ["/usr/sbin/sshd", "-D"]
+
