--- a/deployment/production/REQUIREMENTS.txt
+++ b/deployment/production/REQUIREMENTS.txt
@@ -64,3 +64,5 @@ geopy==2.0.0
 python-dwca-reader==0.15.0
 gitpython==3.1.13
 django-json-widget==1.1.1
+django-webpack-loader==1.3.0
+requests-cache==0.6.0
